Added circuit breaker and config server

--- a/metro-central-service-eureka-client/src/main/resources/application.properties
+++ b/metro-central-service-eureka-client/src/main/resources/application.properties
@@ -5,18 +5,115 @@ eureka.client.instance.preferIpAddress=true
 
 spring.application.name=metro-central-service
 
-#resilience4j.circuitbreaker.instances.customerDetails.register-health-indicator=true
-#resilience4j.circuitbreaker.instances.customerDetails.eventConsumerBufferSize: 10
-#resilience4j.circuitbreaker.instances.customerDetails.automaticTransitionFromOpenToHalfOpenEnabled: true
-##it shows the percentage of the total sliding-window-size fails and will cause the circuit breaker trips or open
-#resilience4j.circuitbreaker.instances.customerDetails.failureRateThreshold: 50
-#
-#resilience4j.circuitbreaker.instances.customerDetails.minimumNumberOfCalls: 5
-#resilience4j.circuitbreaker.instances.customerDetails.permittedNumberOfCallsInHalfOpenState: 3
-##to record last N requests to make the circuit breaker trip or open
-#resilience4j.circuitbreaker.instances.customerDetails.slidingWindowSize: 10
-#resilience4j.circuitbreaker.instances.customerDetails.waitDurationInOpenState: 5s
-##count based : the circuit breaker switches from the closed state to an open state when the last N requests have failed or timedout
-##Time-based : the circuit breaker switches from a closed state to an open state when last N times unit has failed or timeout
-#resilience4j.circuitbreaker.instances.customerDetails.slidingWindowType: COUNT_BASED
-#
+resilience4j.circuitbreaker.instances.LoginCard.register-health-indicator=true
+resilience4j.circuitbreaker.instances.LoginCard.eventConsumerBufferSize: 10
+resilience4j.circuitbreaker.instances.LoginCard.automaticTransitionFromOpenToHalfOpenEnabled: true
+resilience4j.circuitbreaker.instances.LoginCard.failureRateThreshold: 50
+resilience4j.circuitbreaker.instances.LoginCard.minimumNumberOfCalls: 5
+resilience4j.circuitbreaker.instances.LoginCard.permittedNumberOfCallsInHalfOpenState: 3
+resilience4j.circuitbreaker.instances.LoginCard.slidingWindowSize: 10
+resilience4j.circuitbreaker.instances.LoginCard.waitDurationInOpenState: 5s
+resilience4j.circuitbreaker.instances.LoginCard.slidingWindowType: COUNT_BASED
+
+
+resilience4j.circuitbreaker.instances.RegisterCard.register-health-indicator=true
+resilience4j.circuitbreaker.instances.RegisterCard.eventConsumerBufferSize: 10
+resilience4j.circuitbreaker.instances.RegisterCard.automaticTransitionFromOpenToHalfOpenEnabled: true
+resilience4j.circuitbreaker.instances.RegisterCard.failureRateThreshold: 50
+resilience4j.circuitbreaker.instances.RegisterCard.minimumNumberOfCalls: 5
+resilience4j.circuitbreaker.instances.RegisterCard.permittedNumberOfCallsInHalfOpenState: 3
+resilience4j.circuitbreaker.instances.RegisterCard.slidingWindowSize: 10
+resilience4j.circuitbreaker.instances.RegisterCard.waitDurationInOpenState: 5s
+resilience4j.circuitbreaker.instances.RegisterCard.slidingWindowType: COUNT_BASED
+
+
+resilience4j.circuitbreaker.instances.GetCardById.register-health-indicator=true
+resilience4j.circuitbreaker.instances.GetCardById.eventConsumerBufferSize: 10
+resilience4j.circuitbreaker.instances.GetCardById.automaticTransitionFromOpenToHalfOpenEnabled: true
+resilience4j.circuitbreaker.instances.GetCardById.failureRateThreshold: 50
+resilience4j.circuitbreaker.instances.GetCardById.minimumNumberOfCalls: 5
+resilience4j.circuitbreaker.instances.GetCardById.permittedNumberOfCallsInHalfOpenState: 3
+resilience4j.circuitbreaker.instances.GetCardById.slidingWindowSize: 10
+resilience4j.circuitbreaker.instances.GetCardById.waitDurationInOpenState: 5s
+resilience4j.circuitbreaker.instances.GetCardById.slidingWindowType: COUNT_BASED
+
+
+resilience4j.circuitbreaker.instances.RechargeCard.register-health-indicator=true
+resilience4j.circuitbreaker.instances.RechargeCard.eventConsumerBufferSize: 10
+resilience4j.circuitbreaker.instances.RechargeCard.automaticTransitionFromOpenToHalfOpenEnabled: true
+resilience4j.circuitbreaker.instances.RechargeCard.failureRateThreshold: 50
+resilience4j.circuitbreaker.instances.RechargeCard.minimumNumberOfCalls: 5
+resilience4j.circuitbreaker.instances.RechargeCard.permittedNumberOfCallsInHalfOpenState: 3
+resilience4j.circuitbreaker.instances.RechargeCard.slidingWindowSize: 10
+resilience4j.circuitbreaker.instances.RechargeCard.waitDurationInOpenState: 5s
+resilience4j.circuitbreaker.instances.RechargeCard.slidingWindowType: COUNT_BASED
+
+
+resilience4j.circuitbreaker.instances.GetAllCardIds.register-health-indicator=true
+resilience4j.circuitbreaker.instances.GetAllCardIds.eventConsumerBufferSize: 10
+resilience4j.circuitbreaker.instances.GetAllCardIds.automaticTransitionFromOpenToHalfOpenEnabled: true
+resilience4j.circuitbreaker.instances.GetAllCardIds.failureRateThreshold: 50
+resilience4j.circuitbreaker.instances.GetAllCardIds.minimumNumberOfCalls: 5
+resilience4j.circuitbreaker.instances.GetAllCardIds.permittedNumberOfCallsInHalfOpenState: 3
+resilience4j.circuitbreaker.instances.GetAllCardIds.slidingWindowSize: 10
+resilience4j.circuitbreaker.instances.GetAllCardIds.waitDurationInOpenState: 5s
+resilience4j.circuitbreaker.instances.GetAllCardIds.slidingWindowType: COUNT_BASED
+
+
+resilience4j.circuitbreaker.instances.GetStationNamesList.register-health-indicator=true
+resilience4j.circuitbreaker.instances.GetStationNamesList.eventConsumerBufferSize: 10
+resilience4j.circuitbreaker.instances.GetStationNamesList.automaticTransitionFromOpenToHalfOpenEnabled: true
+resilience4j.circuitbreaker.instances.GetStationNamesList.failureRateThreshold: 50
+resilience4j.circuitbreaker.instances.GetStationNamesList.minimumNumberOfCalls: 5
+resilience4j.circuitbreaker.instances.GetStationNamesList.permittedNumberOfCallsInHalfOpenState: 3
+resilience4j.circuitbreaker.instances.GetStationNamesList.slidingWindowSize: 10
+resilience4j.circuitbreaker.instances.GetStationNamesList.waitDurationInOpenState: 5s
+resilience4j.circuitbreaker.instances.GetStationNamesList.slidingWindowType: COUNT_BASED
+
+
+resilience4j.circuitbreaker.instances.SwipeIn.register-health-indicator=true
+resilience4j.circuitbreaker.instances.SwipeIn.eventConsumerBufferSize: 10
+resilience4j.circuitbreaker.instances.SwipeIn.automaticTransitionFromOpenToHalfOpenEnabled: true
+resilience4j.circuitbreaker.instances.SwipeIn.failureRateThreshold: 50
+resilience4j.circuitbreaker.instances.SwipeIn.minimumNumberOfCalls: 5
+resilience4j.circuitbreaker.instances.SwipeIn.permittedNumberOfCallsInHalfOpenState: 3
+resilience4j.circuitbreaker.instances.SwipeIn.slidingWindowSize: 10
+resilience4j.circuitbreaker.instances.SwipeIn.waitDurationInOpenState: 5s
+resilience4j.circuitbreaker.instances.SwipeIn.slidingWindowType: COUNT_BASED
+
+
+
+resilience4j.circuitbreaker.instances.SwipeOut.register-health-indicator=true
+resilience4j.circuitbreaker.instances.SwipeOut.eventConsumerBufferSize: 10
+resilience4j.circuitbreaker.instances.SwipeOut.automaticTransitionFromOpenToHalfOpenEnabled: true
+resilience4j.circuitbreaker.instances.SwipeOut.failureRateThreshold: 50
+resilience4j.circuitbreaker.instances.SwipeOut.minimumNumberOfCalls: 5
+resilience4j.circuitbreaker.instances.SwipeOut.permittedNumberOfCallsInHalfOpenState: 3
+resilience4j.circuitbreaker.instances.SwipeOut.slidingWindowSize: 10
+resilience4j.circuitbreaker.instances.SwipeOut.waitDurationInOpenState: 5s
+resilience4j.circuitbreaker.instances.SwipeOut.slidingWindowType: COUNT_BASED
+
+
+
+resilience4j.circuitbreaker.instances.LastTransaction.register-health-indicator=true
+resilience4j.circuitbreaker.instances.LastTransaction.eventConsumerBufferSize: 10
+resilience4j.circuitbreaker.instances.LastTransaction.automaticTransitionFromOpenToHalfOpenEnabled: true
+resilience4j.circuitbreaker.instances.LastTransaction.failureRateThreshold: 50
+resilience4j.circuitbreaker.instances.LastTransaction.minimumNumberOfCalls: 5
+resilience4j.circuitbreaker.instances.LastTransaction.permittedNumberOfCallsInHalfOpenState: 3
+resilience4j.circuitbreaker.instances.LastTransaction.slidingWindowSize: 10
+resilience4j.circuitbreaker.instances.LastTransaction.waitDurationInOpenState: 5s
+resilience4j.circuitbreaker.instances.LastTransaction.slidingWindowType: COUNT_BASED
+
+
+
+resilience4j.circuitbreaker.instances.TransactionHistory.register-health-indicator=true
+resilience4j.circuitbreaker.instances.TransactionHistory.eventConsumerBufferSize: 10
+resilience4j.circuitbreaker.instances.TransactionHistory.automaticTransitionFromOpenToHalfOpenEnabled: true
+resilience4j.circuitbreaker.instances.TransactionHistory.failureRateThreshold: 50
+resilience4j.circuitbreaker.instances.TransactionHistory.minimumNumberOfCalls: 5
+resilience4j.circuitbreaker.instances.TransactionHistory.permittedNumberOfCallsInHalfOpenState: 3
+resilience4j.circuitbreaker.instances.TransactionHistory.slidingWindowSize: 10
+resilience4j.circuitbreaker.instances.TransactionHistory.waitDurationInOpenState: 5s
+resilience4j.circuitbreaker.instances.TransactionHistory.slidingWindowType: COUNT_BASED
+
