--- a/transaction-service-eureka-client/src/main/resources/application.properties
+++ b/transaction-service-eureka-client/src/main/resources/application.properties
@@ -1,30 +1,31 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/transactiondatabase
-spring.datasource.username=root
-spring.datasource.password=wiley
+#spring.datasource.username=root
+#spring.datasource.password=wiley
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+#
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#
+#spring.jpa.show-sql=true
+#
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.jpa.show-sql=true
+#server.port=8081
 
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-
-server.port=8081
-
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-eureka.client.instance.preferIpAddress=true
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+#eureka.client.instance.preferIpAddress=true
 spring.application.name=transaction-service
 
+
+spring.cloud.config.uri=http://localhost:8888
 
 resilience4j.circuitbreaker.instances.stationsCovered.register-health-indicator=true
 resilience4j.circuitbreaker.instances.stationsCovered.eventConsumerBufferSize: 10
 resilience4j.circuitbreaker.instances.stationsCovered.automaticTransitionFromOpenToHalfOpenEnabled: true
 #it shows the percentage of the total sliding-window-size fails and will cause the circuit breaker trips or open
 resilience4j.circuitbreaker.instances.stationsCovered.failureRateThreshold: 50
-
 resilience4j.circuitbreaker.instances.stationsCovered.minimumNumberOfCalls: 5
 resilience4j.circuitbreaker.instances.stationsCovered.permittedNumberOfCallsInHalfOpenState: 3
 #to record last N requests to make the circuit breaker trip or open
@@ -35,3 +36,16 @@ resilience4j.circuitbreaker.instances.stationsCovered.waitDurationInOpenState: 5
 resilience4j.circuitbreaker.instances.stationsCovered.slidingWindowType: COUNT_BASED
 
 
+resilience4j.circuitbreaker.instances.cardService.register-health-indicator=true
+resilience4j.circuitbreaker.instances.cardService.eventConsumerBufferSize: 10
+resilience4j.circuitbreaker.instances.cardService.automaticTransitionFromOpenToHalfOpenEnabled: true
+#it shows the percentage of the total sliding-window-size fails and will cause the circuit breaker trips or open
+resilience4j.circuitbreaker.instances.cardService.failureRateThreshold: 50
+resilience4j.circuitbreaker.instances.cardService.minimumNumberOfCalls: 5
+resilience4j.circuitbreaker.instances.cardService.permittedNumberOfCallsInHalfOpenState: 3
+#to record last N requests to make the circuit breaker trip or open
+resilience4j.circuitbreaker.instances.cardService.slidingWindowSize: 10
+resilience4j.circuitbreaker.instances.cardService.waitDurationInOpenState: 5s
+#count based : the circuit breaker switches from the closed state to an open state when the last N requests have failed or timedout
+#Time-based : the circuit breaker switches from a closed state to an open state when last N times unit has failed or timeout
+resilience4j.circuitbreaker.instances.cardService.slidingWindowType: COUNT_BASED
